--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script
+      async
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh8jBnVjzI7qopX8KncBhqzZA7JJ2mW4A"
+    ></script>
   </head>
 
   <body>
